--- a/docs/vue/组件.md
+++ b/docs/vue/组件.md
@@ -1,6 +1,12 @@
-## 插槽
+## 组件
 
-### 匿名插槽
+
+
+### 插槽
+
+
+
+#### 匿名插槽
 
 ```js
 // rabbet-child 子组件名称
@@ -19,7 +25,9 @@
 
 
 
-### 具名插槽
+
+
+#### 具名插槽
 
 **注意：**默认插槽的缩写语法**不能**和**具名插槽**混用，因为它会导致作用域不明确
 
@@ -53,7 +61,7 @@
 
 
 
-#### 具名插槽 新版写法
+##### 具名插槽 新版写法
 
 ```js
 		// 父组件中
@@ -83,7 +91,7 @@
     </footer>
 ```
 
-#### 独占默认插槽的缩写语法 
+##### 独占默认插槽的缩写语法
 
  当被提供的内容*只有*默认插槽时组件的标签才可以被当作插槽的模板来使用这样我们就可以把 `v-slot` 直接用在组件上：
 
@@ -105,10 +113,31 @@
 
 
 
-### **带有slot attribute的具名插槽**
+##### **带有slot attribute的具名插槽**
 
  `slot-scope`在vue 2.60中 已被废弃 
 
  template 上使用特殊的 slot attribute  可以将内容从父级传给具名插槽
 
 slot attribute 可放在一个普通元素上
+
+
+
+
+
+### 动态组件上使用 `keep-alive`
+
+**描述**：在组件之间切换时，如果在这个组件写了东西，切换到了其他组件去了，回来的时候页面刷新了
+
+当在这些组件之间切换的时候，你有时会想保持这些组件的状态，以避免反复重新渲染导致的性能问题。例如我们来展开说一说这个多标签界面：
+
+```js
+<!-- 失活的组件将会被缓存！-->
+// 不需要失活的就用<keep-alive> 标签包起来就不会失活会被缓存
+<keep-alive>
+  <component v-bind:is="currentTabComponent"></component> // component组件名字
+</keep-alive>
+```
+
+**注意** 这个 `<keep-alive>` 要求被切换到的组件都有自己的名字，不论是通过组件的 `name` 选项还是局部/全局注册。
+
