添加充组件传参'

--- a/docs/vue/组件.md
+++ b/docs/vue/组件.md
@@ -113,13 +113,22 @@
 
 
 
-##### **带有slot attribute的具名插槽**
-
- `slot-scope`在vue 2.60中 已被废弃 
-
- template 上使用特殊的 slot attribute  可以将内容从父级传给具名插槽
-
-slot attribute 可放在一个普通元素上
+```js
+// 父组件中
+// 2.6之前的写法  
+// username接收子组件传递过来的参数
+<div slot="body" slot-scope="{username}">身体-{{username}}</div> 
+// 2.6之后写法 v-slot可以简写为'#'
+<template #body="{username}"><div>身体-{{username}}</div></template>
+    
+    
+ // 子组件中
+    <div>子组件
+      <!-- 具名插槽&作用域插槽 -->
+// 传递给父组件 username 前面为传递过去的名称 引号里面的为传递过去的参数
+      <slot name="body" :username="username"></slot>
+    </div>
+```
 
 
 
@@ -140,4 +149,130 @@ slot attribute 可放在一个普通元素上
 ```
 
 **注意** 这个 `<keep-alive>` 要求被切换到的组件都有自己的名字，不论是通过组件的 `name` 选项还是局部/全局注册。
+
+
+
+
+
+### 组件传参
+
+#### 普通传参
+
+父传子  :接收名=“要传的变量名”
+
+子组件接收: props接收
+
+```js
+// 父组件child-1名  
+// list 为子组件那边接收参数的名字
+// todo 为父组件要传递给子组件的参数名称 (需要在data里面定义的数据)
+<child-1 :list="todo"></child-1>
+export default {
+    data（）{
+        return {
+    		todo:{name:'友爱'}
+    	}
+	}
+}
+
+
+
+// 子组件
+<template>
+    {{ list.name }} // 输出 友爱
+</template>
+export default {
+    props:{// 注意不要写在data里面，他和data同级
+        list: {
+            type: Object // 定义接收的参数类型
+            default: () => ({}) // 设置参数默认类型 （注意：对象需要用括号吧{}阔起来）
+    		required: true, // 是否是必须传的参数，默认false
+        }
+    }
+}
+```
+
+
+
+#### v-model 传参
+
+父组件 => v-model
+
+子组件接收props:{value:{}}
+
+可将接收过来的值取反返回给父组件
+
+```js
+// 父组件中  child-two 为子组件名称
+// v-model 传递到子组件的参数名称 todo为传递到子组件的参数(需要在data中定义)
+<child-two v-model="todo"></child-two>
+// <child-two v-model="a"></child-two> // 此方法将a传递给子组件子组件改值后传回来
+export default {
+     data（）{
+        return {
+    		todo:{name:'友爱'}，
+            a:true
+    	}
+	}
+}
+
+// 子组件中
+<template>
+  <div v-if=“value” @click=“a”> // 点击之后会将父组件传递回来的treu取反(false)返回给父组件，此时这个盒子就会影藏
+  组件2 {{ value.name }} // 输出 友爱
+  </div>
+</template>
+
+export default {
+props:{ // 接收父组件传递过来的值
+    value:{ // 接收父组件传递过来的参数命名为value，v-model也就是value所以和第一个放大
+      type: Object,
+      default: () => ({})
+    }
+  },
+    methods: {
+    fn() { // 点击之后就将值传递会父组件
+        this.$emit('input', !this.value) // 将父组件的值取反传回去
+    }
+  }
+}
+```
+
+
+
+#### sync 指令传参
+
+
+
+```js
+// 父组件中
+// child-there 子组件名称
+// there 传到子组件的变量名称
+// todo.team 将todo里面的team参数传递到子组件中
+<child-there :there.sync="todo.team"></child-there>
+
+
+
+// 子组件中
+<template>
+  <div @click="fn">
+    组件3 sync {{ there.name }}
+  </div>
+</template>
+
+export default {
+    props:{ // 接收父组件的参数
+        there:{ // 接收父组件的参数 名字为there
+          type: String, // 参数值
+          default: '' // 默认值
+        }
+  },
+ methods: {  
+  fn() {
+    console.log(this.there);
+        this.$emit('update:there', '111') // 将父组件传递过来的参数there.name改为111(注意修改的值也需要和修改前的值类型相同)
+      }
+  }
+}
+```
 
